# ElectricEngineManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  engine.sqlite  main.cpp  modelmanager.cpp  modelmanager.h  navigation.cpp  navigation.h
model/engine/: engine.cpp  engine.h  engine_dao.cpp  engine_dao.h  engine_model.cpp  engine_model.h
model/launch/: launch.cpp  launch.h  launch_dao.cpp  launch_dao.h  launch_model.cpp  launch_model.h
pages/: mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  page.cpp  page.h
pages/engine/add_engine/: add_engine.cpp  add_engine.h  add_engine.ui
pages/engine/prepare_start/: preparestart.cpp  preparestart.h  preparestart.ui
pages/engine/settings/: settings.cpp  settings.h  settings.ui
pages/launch_log/: launch_log.cpp  launch_log.h  launch_log.ui
pages/remote/: remote.cpp  remote.h  remote.ui  remote_run_engine.cpp  remote_run_engine.h  remote_run_engine.ui
proto/: message.proto  start.proto  stop.proto
server/: server.cpp  server.h  session.cpp  session.h  synchronized_queue.h
